// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: { base: true, xs: false, s: true, m: false, l: true, xl: false }, theme: auto, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}
@media(min-width:480px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:760px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1000px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media(min-width:1300px) {
  .label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
  }
}

@media(min-width:1760px) {
  .label {
    position: static;
    width: auto;
    height: auto;
    padding: 0;
    margin: 0;
    overflow: visible;
    clip: auto;
    white-space: normal;
  }
}

@media (prefers-color-scheme: dark) {
  .label {
    color: #FBFCFF;
  }
  .label+.label {
    color: #AFB0B3;
  }
}
"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: dark, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: 0 } 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: light, additionalDefaultJssStyle: { position: 'absolute' } and additionalIsShownJssStyle: { padding: 0 } 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: false, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: true, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #FBFCFF;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #AFB0B3;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: false, hideLabel: true, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: pointer;
  justify-self: flex-start;
  color: #010205;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  color: #535457;
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: true, hideLabel: false, theme: dark, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  justify-self: flex-start;
  color: #7E7F82;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}"
`;

exports[`getLabelStyles() should return correct css for isDisabledOrLoading: true, hideLabel: false, theme: light, additionalDefaultJssStyle: undefined and additionalIsShownJssStyle: undefined 1`] = `
".label {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  cursor: not-allowed;
  justify-self: flex-start;
  color: #949598;
  transition: color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  position: static;
  width: auto;
  height: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  clip: auto;
  white-space: normal;
}
.label:empty {
  display: none;
}
.label+.label {
  cursor: unset;
  margin-top: -4px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
}
.required {
  user-select: none;
}"
`;
